# sci-markdown

./: README.md  pyproject.toml  test.md  text.html
src/sci_markdown/: __init__.py  __main__.py  default_page.html
